--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     
     <title>TuCour</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="">
+    <div id="root" class=""></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
